Fixes text align

--- a/src/features/App/components/Header/styles.less
+++ b/src/features/App/components/Header/styles.less
@@ -74,6 +74,7 @@
   padding: 5em 1em;
   position: relative;
   z-index: @searchBarZ;
+  text-align: center;
 }
 
 .heroImage {
